--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "email": "l.roettig@techdivision.com",
-            "name": "Lars Roettig"
+            "name": "Lars Roettig",
             "homepage": "https://larsroettig.dev/",
             "role": "Developer"
         }
