--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": "~7.2.0||~7.3.0",
+        "php": "~7.2.0||~7.3.0||7.4.0",
         "magento/framework": "102.0.*"
     },
     "suggest": {
@@ -34,7 +34,6 @@
         "povils/phpmnd": "^2.1@dev",
         "jakub-onderka/php-parallel-lint": "dev-master",
         "phpunit/phpunit": "*",
-        "composer/composer": "*@dev"
     },
     "autoload": {
         "files": [
